docs/core/v0.11/_sources/reference/tmlt/core/measurements/interactive_measurements/index.rst.txt



*******************************
interactive_measurements
*******************************

.. py:module:: tmlt.core.measurements.interactive_measurements

.. autoapi-nested-parse::

   Measurements that allow interactively submitting queries to a private dataset.











Functions
=========

.. list-table::

   * - :func:`.create_adaptive_composition`
     - Returns a measurement to launch a :class:`~.DecoratedQueryable`.

.. py:function:: create_adaptive_composition(input_domain, input_metric, d_in, privacy_budget, output_measure)

   Returns a measurement to launch a :class:`~.DecoratedQueryable`.

   Returned :class:`~.DecoratedQueryable` allows transforming the private data
   and answering non-interactive :class:`~.MeasurementQuery`\ s as long as the
   cumulative privacy budget spent does not exceed `privacy_budget`.

   :param input_domain: Domain of input datasets.
   :param input_metric: Distance metric for input datasets.
   :param d_in: Input metric value for inputs.
   :param privacy_budget: Total privacy budget across all measurements.
   :param output_measure: Distance measure for measurement's output.




Classes
=======

.. list-table::

   * - :class:`.Queryable`
     - Base class for Queryables.
   * - :class:`.MeasurementQuery`
     - Contains a Measurement and the `d_out` it satisfies.
   * - :class:`.TransformationQuery`
     - Contains a Transformation and the `d_out` it satisfies.
   * - :class:`.IndexQuery`
     - Contains the index of measurement to be answered.
   * - :class:`.RetireQuery`
     - Query for retiring a RetirableQueryable.
   * - :class:`.RetirableQueryable`
     - Wraps another Queryable and allows retiring all descendant Queryables.
   * - :class:`.SequentialQueryable`
     - Answers interactive measurement queries sequentially.
   * - :class:`.ParallelQueryable`
     - Answers index queries on partitions.
   * - :class:`.GetAnswerQueryable`
     - Returns answer obtained from a non-interactive measurement.
   * - :class:`.DecoratedQueryable`
     - Allows modifying the query to and the answer from a Queryable.
   * - :class:`.DecorateQueryable`
     - Creates a :class:`~.DecoratedQueryable`.
   * - :class:`.SequentialComposition`
     - Creates a :class:`~.SequentialQueryable`.
   * - :class:`.ParallelComposition`
     - Creates a :class:`~.ParallelQueryable`.
   * - :class:`.MakeInteractive`
     - Creates a :class:`~.GetAnswerQueryable`.
   * - :class:`.PrivacyAccountantState`
     - All possible states for a :class:`~.PrivacyAccountant`.
   * - :class:`.PrivacyAccountant`
     - An interface for adaptively composing measurements across transformed datasets.

   
.. py:class:: Queryable

   Bases: :class:`abc.ABC`

   Base class for Queryables.

   .. note::

      All subclasses of Queryable should have exactly one public
      method: `__call__`.






   .. py:method:: __call__(query)
      :abstractmethod:

      Returns answer to given query.



   
.. py:class:: MeasurementQuery

   Contains a Measurement and the `d_out` it satisfies.

   .. note:: The `d_in` is known by the Queryable.

   Used by

   * :class:`~.SequentialQueryable`






   .. py:attribute:: measurement
      :annotation: :tmlt.core.measurements.base.Measurement

      The measurement to answer.

   .. py:attribute:: d_out
      :annotation: :Optional[Any]

      The output measure value satisfied by measurement.

      It is only required if the measurement's :meth:`~.Measurement.privacy_function`
      raises :class:`NotImplementedError`.



   
.. py:class:: TransformationQuery

   Contains a Transformation and the `d_out` it satisfies.

   .. note:: The `d_in` is known by the Queryable.

   Used by

   * :class:`~.SequentialQueryable`






   .. py:attribute:: transformation
      :annotation: :tmlt.core.transformations.base.Transformation

      The transformation to apply.

   .. py:attribute:: d_out
      :annotation: :Optional[Any]

      The output metric value satisfied by the transformation.

      It is only required if the transformations's
      :meth:`.Transformation.stability_function` raises :class:`NotImplementedError`.



   
.. py:class:: IndexQuery

   Contains the index of measurement to be answered.

   Used by

   * :class:`~.ParallelQueryable`








   
.. py:class:: RetireQuery

   Query for retiring a RetirableQueryable.

   Used by

   * :class:`~.RetirableQueryable`








   
.. py:class:: RetirableQueryable(queryable)

   Bases: :class:`Queryable`

   Wraps another Queryable and allows retiring all descendant Queryables.

   A RetirableQueryable can be initialized with any instance of :class:`~.Queryable`
   and can be in one of two internal states: "active" or "retired".

   All descendant :class:`~.Queryable`\ s of a RetirableQueryable are instances of
   RetirableQueryable. The :attr:`~.RetirableQueryable.__call__` method on
   RetirableQueryable accepts a special :class:`~.RetireQuery` query that retires
   itself and all descendant :class:`~.Queryable`\ s.

   Submitting a query `q` to a RetirableQueryable `RQ` has the following behavior:

       * | If `q` is a :class:`~.RetireQuery`, `RQ` submits a :class:`~.RetireQuery` to
         | each child :class:`~.RetirableQueryable`, changes its state to "retired"
         | and returns `None`.
       * | If `q` is not a :class:`~.RetireQuery` and `RQ` is "active", it obtains
         | an answer `A` by submitting `q` to its inner Queryable.

           * If `A` is not a Queryable, `RQ` returns `A`.
           * | Otherwise, `RQ` constructs and returns a new RetirableQueryable with
             | :class:`~.Queryable` `A`.

       * | If `q` is not a :class:`~.RetireQuery` and `RQ` is "retired", an error is
         | raised.







   .. automethod:: __init__
   .. py:method:: __call__(query)

      Answers query.

      If `query` is :class:`~.RetireQuery`, this queryable and all descendant
      queryables are retired. Otherwise, the `query` is routed to the wrapped
      queryable.



   
.. py:class:: SequentialQueryable(input_domain, input_metric, d_in, output_measure, privacy_budget, data)

   Bases: :class:`Queryable`

   Answers interactive measurement queries sequentially.

   All interactions with a Queryable obtained from answering an interactive
   measurement must be completed before a second interactive measurement
   can be answered.






   .. automethod:: __init__
   .. py:method:: __call__(query)

      Answers the query.



   
.. py:class:: ParallelQueryable(data, measurements)

   Bases: :class:`Queryable`

   Answers index queries on partitions.






   .. automethod:: __init__
   .. py:method:: __call__(query)

      Answers :class:`IndexQuery`\ s.



   
.. py:class:: GetAnswerQueryable(measurement, data)

   Bases: :class:`Queryable`

   Returns answer obtained from a non-interactive measurement.






   .. automethod:: __init__
   .. py:method:: __call__(query)

      Returns answer.



   
.. py:class:: DecoratedQueryable(queryable, preprocess_query, postprocess_answer)

   Bases: :class:`Queryable`

   Allows modifying the query to and the answer from a Queryable.

   The privacy guarantee for :class:`~.DecoratedQueryable` depends on the passed
   function `postprocess_answer` satisfying certain properties. In particular,
   `postprocess_answer` should not use distinguishing pseudo-side channel information,
   and should be well-defined on its abstract domain. See
   :ref:`postprocessing-udf-assumptions`.






   .. automethod:: __init__
   .. py:method:: __call__(query)

      Answers query.



   
.. py:class:: DecorateQueryable(measurement, preprocess_query, postprocess_answer)

   Bases: :class:`tmlt.core.measurements.base.Measurement`

   Creates a :class:`~.DecoratedQueryable`.

   This class allows preprocessing queries to a :class:`~.Queryable` launched by
   another interactive measurement as well as post-processing answers produced by the
   :class:`~.Queryable`.






   .. automethod:: __init__
   .. py:method:: measurement()
      :property:

      Returns wrapped :class:`~.Measurement`.


   .. py:method:: preprocess_query()
      :property:

      Returns function to preprocess queries.


   .. py:method:: postprocess_answer()
      :property:

      Returns function to postprocess answers.


   .. py:method:: privacy_function(d_in)

      Returns the smallest d_out satisfied by the measurement.


   .. py:method:: __call__(data)

      Returns a :class:`~.DecoratedQueryable`.


   .. py:method:: input_domain()
      :property:

      Return input domain for the measurement.


   .. py:method:: input_metric()
      :property:

      Distance metric on input domain.


   .. py:method:: output_measure()
      :property:

      Distance measure on output.


   .. py:method:: is_interactive()
      :property:

      Returns true iff the measurement is interactive.


   .. py:method:: privacy_relation(d_in, d_out)

      Return True if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under `input_metric`.
      :param d_out: Distance between outputs under `output_measure`.



   
.. py:class:: SequentialComposition(input_domain, input_metric, output_measure, d_in, privacy_budget)

   Bases: :class:`tmlt.core.measurements.base.Measurement`

   Creates a :class:`~.SequentialQueryable`.

   This class allows for measurements to be answered interactively using a cumulative
   privacy budget.

   The main restriction, which is enforced by the returned
   :class:`~.SequentialQueryable`, is that interactive measurements cannot
   be freely interleaved.






   .. automethod:: __init__
   .. py:method:: d_in()
      :property:

      Returns the distance between input datasets.


   .. py:method:: privacy_budget()
      :property:

      Total privacy budget across all measurements.


   .. py:method:: output_measure()
      :property:

      Return output measure for the measurement.


   .. py:method:: privacy_function(d_in)

      Returns the smallest d_out satisfied by the measurement.

      The returned d_out is the privacy_budget.

      :param d_in: Distance between inputs under input_metric. Must be less than or equal
                   to the d_in the measurement was created with.


   .. py:method:: __call__(data)

      Returns a Queryable object on input data.


   .. py:method:: input_domain()
      :property:

      Return input domain for the measurement.


   .. py:method:: input_metric()
      :property:

      Distance metric on input domain.


   .. py:method:: is_interactive()
      :property:

      Returns true iff the measurement is interactive.


   .. py:method:: privacy_relation(d_in, d_out)

      Return True if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under `input_metric`.
      :param d_out: Distance between outputs under `output_measure`.



   
.. py:class:: ParallelComposition(input_domain, input_metric, output_measure, measurements)

   Bases: :class:`tmlt.core.measurements.base.Measurement`

   Creates a :class:`~.ParallelQueryable`.

   This class allows for answering measurements on objects in some
   :class:`~tmlt.core.domains.collections.ListDomain` which have a
   :class:`~tmlt.core.metrics.SumOf` or
   :class:`~tmlt.core.metrics.RootSumOfSquared` input metric, such as after a
   partition.

   The main restriction, which is enforced by the returned
   :class:`~.ParallelQueryable`, is that partitions can only be accessed
   in the sequence that they appear in the list.






   .. automethod:: __init__
   .. py:method:: measurements()
      :property:

      Returns list of composed measurements.


   .. py:method:: privacy_function(d_in)

      Returns the smallest d_out satisfied by the measurement.

      Returns the largest `d_out` from the :meth:`~.Measurement.privacy_function` of
      all of the composed measurements.

      :param d_in: Distance between inputs under input_metric.

      :raises NotImplementedError: If any of the composed measurements'
          :meth:`~.Measurement.privacy_relation` raise
          :class:`NotImplementedError`.


   .. py:method:: __call__(data)

      Returns a :class:`~.ParallelQueryable`.


   .. py:method:: input_domain()
      :property:

      Return input domain for the measurement.


   .. py:method:: input_metric()
      :property:

      Distance metric on input domain.


   .. py:method:: output_measure()
      :property:

      Distance measure on output.


   .. py:method:: is_interactive()
      :property:

      Returns true iff the measurement is interactive.


   .. py:method:: privacy_relation(d_in, d_out)

      Return True if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under `input_metric`.
      :param d_out: Distance between outputs under `output_measure`.



   
.. py:class:: MakeInteractive(measurement)

   Bases: :class:`tmlt.core.measurements.base.Measurement`

   Creates a :class:`~.GetAnswerQueryable`.

   This allows submitting non-interactive measurements as interactive
   measurement queries to :class:`~.SequentialQueryable` and
   :class:`~.ParallelQueryable`.






   .. automethod:: __init__
   .. py:method:: privacy_function(d_in)

      Returns the smallest d_out satisfied by the measurement.


   .. py:method:: privacy_relation(d_in, d_out)

      Returns True only if wrapped measurement's privacy relation is satisfied.


   .. py:method:: measurement()
      :property:

      Returns wrapped non-interactive measurement.


   .. py:method:: __call__(data)

      Returns a :class:`~.GetAnswerQueryable`.


   .. py:method:: input_domain()
      :property:

      Return input domain for the measurement.


   .. py:method:: input_metric()
      :property:

      Distance metric on input domain.


   .. py:method:: output_measure()
      :property:

      Distance measure on output.


   .. py:method:: is_interactive()
      :property:

      Returns true iff the measurement is interactive.



   
.. py:class:: PrivacyAccountantState

   Bases: :class:`enum.Enum`

   All possible states for a :class:`~.PrivacyAccountant`.





   .. py:attribute:: ACTIVE
      :annotation: = 1

      The :class:`~.PrivacyAccountant` is active and can perform actions.

      This is the default state of a :class:`~.PrivacyAccountant` constructed by calling
      :meth:`~.PrivacyAccountant.launch`.

      A :class:`~.PrivacyAccountant` can only perform :ref:`actions <action>` if it is
      ACTIVE.

      Transitioning to ACTIVE:
          A :class:`~.PrivacyAccountant` that is WAITING_FOR_SIBLING will become ACTIVE if

              * the sibling immediately preceding this :class:`~.PrivacyAccountant` is
                  RETIRED.
              * :meth:`~.PrivacyAccountant.force_activate` is called.

                  - This will retire all preceding siblings and their descendants

          A :class:`~.PrivacyAccountant` that is WAITING_FOR_CHILDREN will become ACTIVE
          if

              * all of its children are RETIRED
              * :meth:`~.PrivacyAccountant.force_activate` is called.

                  - This will retire all of its descendants

   .. py:attribute:: WAITING_FOR_SIBLING
      :annotation: = 2

      The :class:`~.PrivacyAccountant` is waiting for the preceding sibling to retire.

      This is the default state of all but the first :class:`~.PrivacyAccountant` created
      by :meth:`~.PrivacyAccountant.split`. :class:`~.PrivacyAccountant`\ s obtained by
      calling :meth:`~.PrivacyAccountant.split` must be activated in the same order that
      they appear in the list.

   .. py:attribute:: WAITING_FOR_CHILDREN
      :annotation: = 3

      The :class:`~.PrivacyAccountant` has children who have not been retired.

      Transitioning to WAITING_FOR_CHILDREN:
          A :class:`~.PrivacyAccountant` that is ACTIVE will become
          WAITING_FOR_CHILDREN if

              * :meth:`~.PrivacyAccountant.split` creates children

   .. py:attribute:: RETIRED
      :annotation: = 4

      The :class:`.PrivacyAccountant` can no longer perform actions.

      Transitioning to RETIRED:
          A :class:`~.PrivacyAccountant` that is WAITING_FOR_SIBLING or ACTIVE
          will become RETIRED if

              * :meth:`~.PrivacyAccountant.retire` is called on it
              * :meth:`~.PrivacyAccountant.retire` is called on one of its ancestors with
                `force` = True
              * :meth:`~.PrivacyAccountant.force_activate` is called on one of its
                succeeding siblings.
              * :meth:`~.PrivacyAccountant.force_activate` is called on one of its
                ancestors.

          .. note::
              If a :class:`~.PrivacyAccountant` is retired while it is
              WAITING_FOR_SIBLING (before it has performed any :ref:`actions <action>`),
              a :class:`RuntimeWarning` is raised.

          A :class:`~.PrivacyAccountant` that is WAITING_FOR_CHILDREN will become RETIRED
          when

              * :meth:`~.PrivacyAccountant.retire` is called on it with `force` = True
              * :meth:`~.PrivacyAccountant.retire` is called on its ancestor with
                `force` = True
              * :meth:`~.PrivacyAccountant.force_activate` is called on one of its
                succeeding siblings.
              * :meth:`~.PrivacyAccountant.force_activate` is called on one of its
                ancestors.


   .. py:method:: name()

      The name of the Enum member.


   .. py:method:: value()

      The value of the Enum member.



   
.. py:class:: PrivacyAccountant(queryable, input_domain, input_metric, output_measure, d_in, privacy_budget, parent = None)

   An interface for adaptively composing measurements across transformed datasets.

   :class:`~.PrivacyAccountant` supports multiple actions to answer measurements and
   transform data.

   .. _action:

   Calling any of the following methods is considered an action:

   * :meth:`~.PrivacyAccountant.transform_in_place`
   * :meth:`~.PrivacyAccountant.measure`
   * :meth:`~.PrivacyAccountant.split`

   To preserve privacy, after children are created (using
   :meth:`~.PrivacyAccountant.split`), there are restrictions on the order of
   interactions among the :class:`~.PrivacyAccountant` and its descendants. See
   :class:`~.PrivacyAccountantState` for more information.



   .. list-table:: Methods

      * - :meth:`.input_domain`
        - Returns the domain of the private data.
      * - :meth:`.input_metric`
        - Returns the distance metric for neighboring datasets.
      * - :meth:`.output_measure`
        - Returns the output measure for measurement outputs.
      * - :meth:`.d_in`
        - Returns the distance for neighboring datasets.
      * - :meth:`.privacy_budget`
        - Returns the remaining privacy budget.
      * - :meth:`.state`
        - Returns this :class:`~.PrivacyAccountant`'s current state.
      * - :meth:`.parent`
        - Returns the parent of this :class:`~.PrivacyAccountant`.
      * - :meth:`.children`
        - Returns the children of this :class:`~.PrivacyAccountant`.
      * - :meth:`.launch`
        - Returns a :class:`~.PrivacyAccountant` from a measurement and data.
      * - :meth:`.transform_in_place`
        - Transforms the private data inside this :class:`~.PrivacyAccountant`.
      * - :meth:`.measure`
        - Returns the answer to `measurement`.
      * - :meth:`.split`
        - Returns new :class:`~.PrivacyAccountant`\ s from splitting the private data.
      * - :meth:`.force_activate`
        - Set this :class:`~.PrivacyAccountant`'s state to ACTIVE.
      * - :meth:`.retire`
        - Set this :class:`~.PrivacyAccountant`'s state to RETIRED.
      * - :meth:`.queue_transformation`
        - Queue `transformation` to be executed when this :class:`~.PrivacyAccountant` becomes ACTIVE.




   .. automethod:: __init__
   .. py:method:: input_domain()
      :property:

      Returns the domain of the private data.


   .. py:method:: input_metric()
      :property:

      Returns the distance metric for neighboring datasets.


   .. py:method:: output_measure()
      :property:

      Returns the output measure for measurement outputs.


   .. py:method:: d_in()
      :property:

      Returns the distance for neighboring datasets.


   .. py:method:: privacy_budget()
      :property:

      Returns the remaining privacy budget.


   .. py:method:: state()
      :property:

      Returns this :class:`~.PrivacyAccountant`'s current state.

      See :class:`~.PrivacyAccountantState` for more information.


   .. py:method:: parent()
      :property:

      Returns the parent of this :class:`~.PrivacyAccountant`.

      If this is the root :class:`~.PrivacyAccountant`, this returns None.


   .. py:method:: children()
      :property:

      Returns the children of this :class:`~.PrivacyAccountant`.

      Children are created by calling :meth:`split`.


   .. py:method:: launch(measurement, data)
      :staticmethod:

      Returns a :class:`~.PrivacyAccountant` from a measurement and data.

      The returned :class:`~.PrivacyAccountant` is
      :attr:`~.PrivacyAccountantState.ACTIVE` and has no
      :attr:`~.PrivacyAccountant.parent`.

      .. rubric:: Example

      ..
          >>> import pandas as pd
          >>> from pyspark.sql import SparkSession
          >>> from tmlt.core.domains.spark_domains import (
          ...     SparkDataFrameDomain,
          ...     SparkIntegerColumnDescriptor,
          ...     SparkStringColumnDescriptor,
          ... )
          >>> from tmlt.core.metrics import SymmetricDifference
          >>> spark = SparkSession.builder.getOrCreate()
          >>> dataframe = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         {
          ...             "A": [1, 2, 3, 4],
          ...             "B": ["b1", "b1", "b2", "b2"],
          ...         }
          ...     )
          ... )

      >>> measurement = SequentialComposition(
      ...     input_domain=SparkDataFrameDomain(
      ...         {
      ...             "A": SparkIntegerColumnDescriptor(),
      ...             "B": SparkStringColumnDescriptor(),
      ...         }
      ...     ),
      ...     input_metric=SymmetricDifference(),
      ...     output_measure=PureDP(),
      ...     d_in=1,
      ...     privacy_budget=5,
      ... )
      >>> privacy_accountant = PrivacyAccountant.launch(measurement, dataframe)
      >>> privacy_accountant.state
      <PrivacyAccountantState.ACTIVE: 1>
      >>> privacy_accountant.output_measure
      PureDP()
      >>> privacy_accountant.privacy_budget
      5
      >>> print(privacy_accountant.parent)
      None

      :param measurement: A :class:`~.SequentialComposition` to apply to the data.
      :param data: The private data to use.


   .. py:method:: transform_in_place(transformation, d_out = None)

      Transforms the private data inside this :class:`~.PrivacyAccountant`.

      This method is an :ref:`action <action>`.

      Requirements to apply `transformation`:

      * this :class:`~.PrivacyAccountant`'s :attr:`~.state` must be ACTIVE
      * `transformation`'s :attr:`~.Transformation.input_domain` must match this
        :class:`~.PrivacyAccountant`'s :attr:`~.input_domain`
      * `transformation`'s :attr:`~.Transformation.input_metric` must match this
        :class:`~.PrivacyAccountant`'s :attr:`~.input_metric`
      * if `d_out` is provided, `transformation`'s
        :meth:`~.Transformation.stability_relation` must hold for
        :class:`~.PrivacyAccountant`'s :attr:`~.d_in` and `d_out`

      After applying `transformation`:

      * this :class:`~.PrivacyAccountant`'s :attr:`~.input_domain` will become
        `transformation`'s :attr:`~.Transformation.output_domain`
      * this :class:`~.PrivacyAccountant`'s :attr:`~.input_metric` will become
        `transformation`'s :attr:`~.Transformation.output_metric`
      * this :class:`~.PrivacyAccountant`'s :attr:`~.d_in` will become
        `transformation`'s d_out

          - if `transformation` implements a
            :meth:`~.Transformation.stability_function`, its d_out is the output of
            its stability function on this :class:`~.PrivacyAccountant`'s
            :attr:`~.d_in`
          - otherwise it is the argument `d_out`

      .. rubric:: Example

      ..
          >>> import numpy as np
          >>> from tmlt.core.domains.numpy_domains import NumpyIntegerDomain
          >>> from tmlt.core.metrics import AbsoluteDifference
          >>> from tmlt.core.transformations.dictionary import (
          ...     CreateDictFromValue,
          ... )
          >>> privacy_accountant = PrivacyAccountant.launch(
          ...     measurement=SequentialComposition(
          ...         input_domain=NumpyIntegerDomain(),
          ...         input_metric=AbsoluteDifference(),
          ...         output_measure=PureDP(),
          ...         d_in=2,
          ...         privacy_budget=5,
          ...     ),
          ...     data=np.int64(20),
          ... )

      >>> privacy_accountant.input_domain
      NumpyIntegerDomain(size=64)
      >>> privacy_accountant.input_metric
      AbsoluteDifference()
      >>> privacy_accountant.output_measure
      PureDP()
      >>> privacy_accountant.d_in
      2
      >>> privacy_accountant.privacy_budget
      5
      >>> transformation = CreateDictFromValue(
      ...     input_domain=NumpyIntegerDomain(),
      ...     input_metric=AbsoluteDifference(),
      ...     key="A",
      ... )
      >>> privacy_accountant.transform_in_place(transformation)
      >>> privacy_accountant.input_domain
      DictDomain(key_to_domain={'A': NumpyIntegerDomain(size=64)})
      >>> privacy_accountant.input_metric
      DictMetric(key_to_metric={'A': AbsoluteDifference()})
      >>> privacy_accountant.output_measure
      PureDP()
      >>> privacy_accountant.d_in
      {'A': 2}
      >>> privacy_accountant.privacy_budget
      5

      :param transformation: The transformation to apply.
      :param d_out: An optional value for the output metric for `transformation`. It is
                    only used if `transformation` does not implement a
                    :meth:`~.Transformation.stability_function`.

      :raises InactiveAccountantError: If this :class:`~.PrivacyAccountant` is not ACTIVE.


   .. py:method:: measure(measurement, d_out = None)

      Returns the answer to `measurement`.

      This method is an :ref:`action <action>`.

      Requirements to answer `measurement`:

      * `measurement`'s :attr:`~.Measurement.input_domain` must match this
        :class:`~.PrivacyAccountant`'s :attr:`~.input_domain`
      * `measurement`'s :attr:`~.Measurement.input_metric` must match this
        :class:`~.PrivacyAccountant`'s :attr:`~.input_metric`
      * `measurement`'s :attr:`~.Measurement.output_measure` must match this
        :class:`~.PrivacyAccountant`'s :attr:`~.output_measure`
      * if `d_out` is provided, `measurement`'s
        :meth:`~.Measurement.privacy_relation` must hold for
        :class:`~.PrivacyAccountant`'s :attr:`~.d_in` and `d_out`
      * this :class:`~.PrivacyAccountant`'s :attr:`~.privacy_budget` must be greater
        than or equal to the `measurement`'s d_out

          - if `measurement` implements a :meth:`~.Measurement.privacy_function`, its
            d_out is the output of its privacy function on this
            :class:`~.PrivacyAccountant`'s :attr:`~.d_in`
          - otherwise it is the argument `d_out`

      After answering `measurement`:

      * this :class:`~.PrivacyAccountant`'s :attr:`~.privacy_budget` will decrease by
        `measurement`'s d_out

      .. rubric:: Example

      ..
          >>> import numpy as np
          >>> from tmlt.core.domains.numpy_domains import NumpyIntegerDomain
          >>> from tmlt.core.measurements.noise_mechanisms import (
          ...     AddLaplaceNoise,
          ... )
          >>> from tmlt.core.metrics import AbsoluteDifference
          >>> from tmlt.core.utils.parameters import calculate_noise_scale
          >>> privacy_accountant = PrivacyAccountant.launch(
          ...     measurement=SequentialComposition(
          ...         input_domain=NumpyIntegerDomain(),
          ...         input_metric=AbsoluteDifference(),
          ...         output_measure=PureDP(),
          ...         d_in=2,
          ...         privacy_budget=5,
          ...     ),
          ...     data=np.int64(20),
          ... )

      >>> privacy_accountant.input_domain
      NumpyIntegerDomain(size=64)
      >>> privacy_accountant.input_metric
      AbsoluteDifference()
      >>> privacy_accountant.output_measure
      PureDP()
      >>> privacy_accountant.d_in
      2
      >>> privacy_accountant.privacy_budget
      5
      >>> noise_scale = calculate_noise_scale(
      ...     d_in=2,
      ...     d_out=3,
      ...     output_measure=PureDP(),
      ... )
      >>> measurement = AddLaplaceNoise(
      ...     input_domain=NumpyIntegerDomain(),
      ...     scale=noise_scale,
      ... )
      >>> privacy_accountant.measure(measurement) # doctest: +ELLIPSIS +NORMALIZE_WHITESPACE
      <BLANKLINE>
      ...
      >>> privacy_accountant.input_domain
      NumpyIntegerDomain(size=64)
      >>> privacy_accountant.input_metric
      AbsoluteDifference()
      >>> privacy_accountant.output_measure
      PureDP()
      >>> privacy_accountant.d_in
      2
      >>> privacy_accountant.privacy_budget
      2

      :param measurement: A non-interactive measurement to answer.
      :param d_out: An optional d_out for `measurement`. It is only used if
                    `measurement` does not implement a
                    :meth:`~.Measurement.privacy_function`.

      :raises InactiveAccountantError: If this :class:`~.PrivacyAccountant` is not ACTIVE.


   .. py:method:: split(splitting_transformation, privacy_budget, d_out = None)

      Returns new :class:`~.PrivacyAccountant`\ s from splitting the private data.

      Uses `splitting_transformation` to split the private data into a list of new
      datasets. A new :class:`~.PrivacyAccountant` is returned for each element in the
      list created by `splitting_transformation`.

      .. note::
          Unlike :meth:`~.transform_in_place`, this does *not* transform the private
          data in this :class:`~.PrivacyAccountant`.

      This method is an :ref:`action <action>`.

      Requirements to split:

      * `splitting_transformation`'s :attr:`~.Transformation.input_domain` must match
        this :class:`~.PrivacyAccountant`'s :attr:`~.input_domain`
      * `splitting_transformation`'s :attr:`~.Transformation.input_metric` must match
        this :class:`~.PrivacyAccountant`'s :attr:`~.input_metric`
      * if `d_out` is provided, `splitting_transformation`'s
        :meth:`~.Transformation.stability_relation` must hold for this
        :class:`~.PrivacyAccountant`'s :attr:`~.d_in` and `d_out`
      * `splitting_transformation`'s :attr:`~.Transformation.output_domain`
        must be a :class:`~.ListDomain` with a fixed :attr:`~.ListDomain.length`.
      * `splitting_transformation`'s :attr:`~.Transformation.output_metric`
        must be :class:`~.SumOf` if this :class:`~.PrivacyAccountant`'s
        :attr:`~.output_measure` is :class:`~.PureDP` or :class:`~.RootSumOfSquared`
        if this :class:`~.PrivacyAccountant`'s :attr:`~.output_measure` is
        :class:`~.RhoZCDP`

      After creating the new :class:`~.PrivacyAccountant`\ s:

      * this :class:`~.PrivacyAccountant`'s :attr:`~.privacy_budget` will decrease by
        `privacy_budget`
      * this :class:`~.PrivacyAccountant`'s :attr:`~.children` will be a list with the new
        :class:`~.PrivacyAccountant`\ s
      * this :class:`~.PrivacyAccountant`'s :attr:`~.state` will become WAITING_FOR_CHILDREN
      * the new :class:`~.PrivacyAccountant`\ s' :attr:`~.input_domain` will be the
        element domain of `splitting_transformation`'s :class:`~.ListDomain`
      * the new :class:`~.PrivacyAccountant`\ s' :attr:`~.input_metric` will be the
        inner metric of `splitting_transformation`'s :class:`~.SumOf` or
        :class:`~.RootSumOfSquared` metric
      * the new :class:`~.PrivacyAccountant`\ s' :attr:`~.output_measure` will be this
        :class:`~.PrivacyAccountant`\ s :attr:`~.output_measure`
      * the new :class:`~.PrivacyAccountant`\ s' :attr:`~.d_in` will be
        `splitting_transformation`'s d_out

          - if `splitting_transformation` implements a
            :meth:`~.Transformation.stability_function`, its d_out is the output of
            its stability function on this :class:`~.PrivacyAccountant`'s
            :attr:`~.d_in`
          - otherwise it is the argument `d_out`
      * the new :class:`~.PrivacyAccountant`\ s' :attr:`~.privacy_budget` will be
        `privacy_budget`
      * the first child :class:`~.PrivacyAccountant`\ 's :attr:`~.state` will be
        ACTIVE and all other child :class:`~.PrivacyAccountant`\ s' :attr:`~.state`
        will be WAITING_FOR_SIBLING.

      .. note::
          After creating children, the :attr:`~.state` will change to WAITING_FOR_CHILDREN,
          until the children are all RETIRED.

      .. rubric:: Example

      ..
          >>> import numpy as np
          >>> from tmlt.core.domains.numpy_domains import NumpyIntegerDomain
          >>> from tmlt.core.domains.collections import DictDomain, ListDomain
          >>> from tmlt.core.metrics import (
          ...     AbsoluteDifference,
          ...     DictMetric,
          ...     SumOf,
          ... )
          >>> from tmlt.core.transformations.dictionary import GetValue
          >>> privacy_accountant = PrivacyAccountant.launch(
          ...     measurement=SequentialComposition(
          ...         input_domain=DictDomain(
          ...             key_to_domain={
          ...                 "A": ListDomain(
          ...                     element_domain=NumpyIntegerDomain(),
          ...                     length=3,
          ...                 )
          ...             }
          ...         ),
          ...         input_metric=DictMetric(
          ...             key_to_metric={
          ...                 "A": SumOf(inner_metric=AbsoluteDifference())
          ...             }
          ...         ),
          ...         output_measure=PureDP(),
          ...         d_in={"A": 2},
          ...         privacy_budget=5,
          ...     ),
          ...     data={"A": [np.int64(10), np.int64(12), np.int64(32)]},
          ... )

      >>> privacy_accountant.input_domain
      DictDomain(key_to_domain={'A': ListDomain(element_domain=NumpyIntegerDomain(size=64), length=3)})
      >>> privacy_accountant.input_metric
      DictMetric(key_to_metric={'A': SumOf(inner_metric=AbsoluteDifference())})
      >>> privacy_accountant.output_measure
      PureDP()
      >>> privacy_accountant.d_in
      {'A': 2}
      >>> privacy_accountant.privacy_budget
      5
      >>> privacy_accountant.state
      <PrivacyAccountantState.ACTIVE: 1>
      >>> splitting_transformation = GetValue(
      ...     input_domain=DictDomain(
      ...         key_to_domain={
      ...             "A": ListDomain(
      ...                 element_domain=NumpyIntegerDomain(),
      ...                 length=3,
      ...             ),
      ...         }
      ...     ),
      ...     input_metric=DictMetric(
      ...         key_to_metric={"A": SumOf(inner_metric=AbsoluteDifference())}
      ...     ),
      ...     key="A",
      ... )
      >>> children = privacy_accountant.split(
      ...     splitting_transformation=splitting_transformation,
      ...     privacy_budget=3,
      ... )
      >>> privacy_accountant.input_domain
      DictDomain(key_to_domain={'A': ListDomain(element_domain=NumpyIntegerDomain(size=64), length=3)})
      >>> privacy_accountant.input_metric
      DictMetric(key_to_metric={'A': SumOf(inner_metric=AbsoluteDifference())})
      >>> privacy_accountant.output_measure
      PureDP()
      >>> privacy_accountant.d_in
      {'A': 2}
      >>> privacy_accountant.privacy_budget
      2
      >>> privacy_accountant.state
      <PrivacyAccountantState.WAITING_FOR_CHILDREN: 3>
      >>> children[0].input_domain
      NumpyIntegerDomain(size=64)
      >>> children[0].input_metric
      AbsoluteDifference()
      >>> children[0].output_measure
      PureDP()
      >>> children[0].d_in
      2
      >>> children[0].privacy_budget
      3
      >>> # The first child is ACTIVE
      >>> children[0].state
      <PrivacyAccountantState.ACTIVE: 1>
      >>> # The other children are WAITING_FOR_SIBLING
      >>> children[1].state
      <PrivacyAccountantState.WAITING_FOR_SIBLING: 2>
      >>> children[2].state
      <PrivacyAccountantState.WAITING_FOR_SIBLING: 2>
      >>> # When the first child is RETIRED, the second child becomes ACTIVE
      >>> children[0].retire()
      >>> children[0].state
      <PrivacyAccountantState.RETIRED: 4>
      >>> children[1].state
      <PrivacyAccountantState.ACTIVE: 1>
      >>> # When all children are RETIRED, the parent transitions from
      >>> # WAITING_FOR_CHILDREN to ACTIVE
      >>> children[1].retire()
      >>> children[2].retire()
      >>> privacy_accountant.state
      <PrivacyAccountantState.ACTIVE: 1>

      :param splitting_transformation: The transformation to apply.
      :param privacy_budget: The privacy budget to allocate to the new
                             :class:`~.PrivacyAccountant`\ s.
      :param d_out: An optional value for the :attr:~.Transformation.output_metric` for
                    `splitting_transformation`. It is only used if `splitting_transformation`
                    does not implement a :meth:`~.Transformation.stability_function`.

      :raises InactiveAccountantError: If this :class:`~.PrivacyAccountant` is not ACTIVE.


   .. py:method:: force_activate()

      Set this :class:`~.PrivacyAccountant`'s state to ACTIVE.

      A :class:`~.PrivacyAccountant` must be ACTIVE to perform
      :ref:`actions <action>`

      See :class:`~.PrivacyAccountantState` for more information.

      If this :class:`~.PrivacyAccountant` is WAITING_FOR_SIBLING, it retires all
      preceding siblings. If this :class:`~.PrivacyAccountant` is
      WAITING_FOR_CHILDREN it retires all of its descendants.

      :raises RuntimeError: If this :class:`~.PrivacyAccountant` is RETIRED.


   .. py:method:: retire(force = False)

      Set this :class:`~.PrivacyAccountant`'s state to RETIRED.

      If this :class:`~.PrivacyAccountant` is WAITING_FOR_SIBLING, it also retires
      all preceding siblings and their descendants. If this
      :class:`~.PrivacyAccountant` is WAITING_FOR_CHILDREN it also retires all of
      its descendants.

      A RETIRED :class:`~.PrivacyAccountant` cannot perform :ref:`actions <action>`,
      but its properties can still be inspected.

      See :class:`~.PrivacyAccountantState` for more information.

      :param force: Whether this :class:`~.PrivacyAccountant` can retire its descendants
                    if this :class:`~.PrivacyAccountant` is WAITING_FOR_CHILDREN.

      :raises RuntimeError: If this :class:`~.PrivacyAccountant` cannot be set to RETIRED.
          If `force` is False, this :class:`~.PrivacyAccountant` cannot be
          WAITING_FOR_CHILDREN. If `force` is True, :meth:`~.retire` can always
          be called.
      :raises RuntimeWarning: If the :class:`~.PrivacyAccountant` is WAITING_FOR_SIBLING.


   .. py:method:: queue_transformation(transformation, d_out = None)

      Queue `transformation` to be executed when this :class:`~.PrivacyAccountant` becomes ACTIVE.

      If this :class:`~.PrivacyAccountant` is ACTIVE, this has
      the same behavior as :meth:`~.transform_in_place`.

      If this :class:`~.PrivacyAccountant` is WAITING_FOR_CHILDREN or
      WAITING_FOR_SIBLING, `transformation` will be applied to the private data
      when this :class:`~.PrivacyAccountant` becomes ACTIVE, but otherwise it
      has the same behavior as :meth:`~.transform_in_place`
      (:attr:`~.input_domain`, :attr:`~.input_metric`, and :attr:`~.d_in` are
      updated immediately).

      Note that multiple transformations can be queued.

      :param transformation: The transformation to apply.
      :param d_out: An optional value for the output metric for `transformation`. It is
                    only used if `transformation` does not implement a
                    :meth:`~.Transformation.stability_function`.




Exceptions
==========


   
.. py:exception:: InsufficientBudgetError(remaining_budget, requested_budget)

   Bases: :class:`ValueError`

   Exception raised when there is not enough budget to perform an operation.

   PrivacyAccountant will raise this exception when asked to perform an
   operation that exceeds its budget.




   
.. py:exception:: InactiveAccountantError

   Bases: :class:`RuntimeError`

   Raised when trying to perform operations on an accountant that is not ACTIVE.

   PrivacyAccountant will raise this exception if you attempt an operation
   and the accountant is not ACTIVE.






